--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1859,8 +1859,8 @@ header.header {
   width: 100%;
   height: 5rem;
   z-index: 5;
-  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
-  transition: box-shadow .3s;
+  /*box-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);*/
+  /*transition: box-shadow .3s;*/
 }
 
 header.header a.brand {
@@ -1942,8 +1942,8 @@ header.header, .burger {
 }
 
 .scrolled.scrolled-up header.header {
-  background: white;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  /*background: white;*/
+  /*box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);*/
 }
 
 .scrolled.scrolled-up header.header, .scrolled.scrolled-up .burger {
